# photoeditor-project-cpp

./: CMakeLists.txt  LICENSE  README.md
algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
gui/: CMakeLists.txt  imageviewer.cpp  imageviewer.h  main.cpp
include/: algorithms.h  controller.h  imageviewer.h  imgur.h  sliders.h  utils.h
src/: algorithms.cpp  controller.cpp  imageviewer.cpp  imgur.cpp  main.cpp  sliders.cpp  utils.cpp
tmp/Mark_openCV/try/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
